# clang-experiments

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  README.md  TODO.md
src/: CMakeLists.txt
src/cppgrep/: cppgrep.cpp  cppgrep.hpp  main.cpp
test/: CMakeLists.txt  cppgrep_all_test.cpp  cppgrep_file_not_found_test.cpp  cppgrep_help_test.cpp  cppgrep_test.cpp  test.hpp
test/resources/: people.cpp  templates.hpp
